--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: var(--clr-magnolia);
 }
 
 img, picture, video, canvas, svg {
