--- a/src/styles/FormStep.css
+++ b/src/styles/FormStep.css
@@ -1,4 +1,86 @@
 .FormStep {
+  position: relative;
+  padding: 2rem 6rem;
   width: 100%;
   height: 100%;
+}
+
+.step-header {
+  font-size: 2rem;
+  color: var(--clr-marine-blue);
+}
+
+.step-subheader {
+  font-size: 1rem;
+  margin-bottom: 3rem;
+  color: var(--clr-cool-gray);
+}
+
+.form-group {
+  color: var(--clr-marine-blue);
+}
+
+.label-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+label {
+  display: block;
+  margin-bottom: .5rem;
+}
+
+.error-msg {
+  color: var(--clr-strawberry-red);
+  font-size: .825rem;
+  font-weight: var(--fw-bold);
+}
+
+.error {
+  border: 1px solid var(--clr-strawberry-red);
+  color: var(--clr-strawberry-red);
+}
+
+.input-text {
+  padding: .5rem;
+  width: 100%;
+  border-radius: .5rem;
+  border: 1px solid var(--clr-light-gray);
+  color: inherit;
+  font-weight: var(--fw-medium);
+  margin-bottom: 1.5rem;
+}
+
+.input-text:active, 
+.input-text:hover,
+.input-text:focus {
+  outline: 1px solid var(--clr-purplish-blue);
+  caret-color: var(--clr-purplish-blue);
+}
+
+.btn-container {
+  /* position: relative; */
+}
+
+button {
+  position: absolute;
+  bottom: 1rem;
+  right: 6rem;
+  color: var(--clr-magnolia);
+  background-color: var(--clr-marine-blue);
+  padding: .5rem 1rem;
+  border-radius: .5rem;
+  font-size: .825rem;
+  transition: background-color 200ms ease;
+}
+
+button:hover,
+button:focus {
+  background-color: var(--clr-marine-blue-lighter);
+  color: var(--clr-white);
+}
+
+button:focus {
+  outline: none;
+
 }
