add toggle button for payment option

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --clr-light-gray: hsl(229, 24%, 87%);
   --clr-magnolia: hsl(217, 100%, 97%);
   --clr-alabaster: hsl(231, 100%, 99%);
+  --clr-gray: hsl(217 65% 98%);
   --clr-white: hsl(0, 0%, 100%);
 
   /* font */
