add annual payment states

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --clr-pastel-blue: hsl(228, 100%, 84%);
   --clr-light-blue: hsl(206, 94%, 87%);
   --clr-strawberry-red: hsl(354, 84%, 57%);
+  --clr-button-disabled: hsl(213, 25%, 40%);
 
   /* neutrals */
   --clr-cool-gray: hsl(231, 11%, 63%);
