--- a/src/styles/FormStep.css
+++ b/src/styles/FormStep.css
@@ -336,3 +336,23 @@
 .btn-confirm:focus {
   background-color: var(--clr-purplish-blue-lighter);
 }
+
+@media (max-width: 1020px) {
+  .FormStep {
+    padding: 1.5rem 3rem;
+  }
+
+  .btn-next {
+    right: 3rem;
+    padding: .5rem 1rem;
+  }
+
+  .btn-back {
+    left: 3rem;
+    padding: .25rem .5rem;
+  }
+}
+
+@media (max-width: 700px) {
+  
+}
