--- a/src/styles/FormStep.css
+++ b/src/styles/FormStep.css
@@ -354,5 +354,41 @@
 }
 
 @media (max-width: 700px) {
-  
+  .FormStep {
+    position: static;
+    padding: .5rem 1rem;
+  }
+
+  .step-header {
+    font-size: 1.5rem;
+  }
+
+  .step-subheader {
+    margin-bottom: 1rem;
+  }
+
+  .btn-container {
+    /* display: none;
+    visibility: hidden; */
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 2rem;
+    margin: 0;
+    height: 4rem;
+    background-color: white;
+  }
+
+  .btn-next {
+    position: absolute;
+    padding: .5rem 1rem;
+    right: 1rem;
+    bottom: .75rem;
+    border-radius: .25rem;
+  }
+
+  .btn-back {
+    bottom: 1rem;
+  }
 }
